--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,38 +1,119 @@
-body, html {
+body,
+html {
     margin: 0;
     padding: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
-ul { list-style: none; padding-left: 5px; }
-a { color:blue; text-decoration: none;}
+
+ul {
+    list-style: none;
+    padding-left: 5px;
+    font-family: sans-serif;
+    font-size: calc(1em * 0.875);
+    line-height: 1.6;
+}
+
+a {
+    color:#CD533B;
+    text-decoration: none;
+    font-family: sans-serif;
+    font-size: calc(1em * 0.975);
+    line-height: 1.6;
+}
+
+a:hover {
+    color:#C7AC92;
+}
+
 .bar {
-    background-color: #f9f9fb;
-    padding:15px;
+    background-color: #CDC5B4;
+    padding: 15px;
     border-top: solid 1px #cdcdcd;
     border-bottom: solid 1px #cdcdcd;
 }
-.content {
+
+main {
     max-width: 1440px;
-    margin: auto;
+    margin: none;
     grid-gap: 3rem;
     display: grid;
     gap: 3rem;
     grid-template-areas: "sidebar main anchors";
-    grid-template-columns: minmax(0,15rem) minmax(0,2.5fr) minmax(0,15rem);
+    grid-template-columns: minmax(0, 15rem) minmax(0, 2.5fr) minmax(0, 15rem);
     padding-left: 1rem;
     padding-right: 1rem;
 }
-.footer {
+
+footer {
     min-height: 100px;
     border-top: solid 1px #cdcdcd;
+    background-color: #CDC5B4;
+    text-align: center;
+    color: white;
 }
+
 .anchors {
     border-left: solid 1px #cdcdcd;
     padding-left: 15px;
+
 }
+
 .sidebar {
     border-right: solid 1px #cdcdcd;
+    padding-right: 30px;
 }
+
 figure {
     text-align: center;
 }
+
+.content {
+    text-align: justify;
+}
+
+h2 {
+    border-bottom: 1px solid #85756E;
+    padding-bottom: 5px;
+    font-style: italic;
+    font-family: 'Linux Libertine','Georgia','Times',serif;
+    font-weight: 500;
+    text-align: cen;
+    color: #988B8E;
+}
+
+h3 {
+    font-family: 'Linux Libertine','Georgia','Times',serif;
+    font-weight: 300;
+    border-bottom: 1px solid #85756E;
+    padding-bottom: 5px;
+    color: #988B8E
+
+}
+
+h4 {
+    font-family: 'Linux Libertine','Georgia','Times',serif;
+    font-weight: bold;
+    color: #85756E
+}
+q {
+    font-family: 'Linux Libertine','Georgia','Times',serif;
+    font-weight: 100;
+    font-style: italic;
+
+}
+
+p {
+    
+    font-family: sans-serif;
+    font-size: calc(1em * 0.875);
+    line-height: 1.6;
+}
+
+#voltar-ao-topo {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+  }
+
+  
